[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player/SpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites && Escenas/Bullet/BulletNormal.tscn" type="PackedScene" id=3]
[ext_resource path="res://PowerUps/Protect/Protect.tscn" type="PackedScene" id=4]

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform vec4 line_color : hint_color = vec4(1);
uniform float line_thickness : hint_range(0, 10) = 1.0;

void fragment() {
	vec2 size = TEXTURE_PIXEL_SIZE * line_thickness;//Tama√±o de linea por fuera
	//ENTENDER BIEN CADA LINEA
	float outline = texture(TEXTURE, UV + vec2(-size.x, 0)).a;
	outline += texture(TEXTURE, UV + vec2(0, size.y)).a;
	outline += texture(TEXTURE, UV + vec2(size.x, 0)).a;
	outline += texture(TEXTURE, UV + vec2(0, -size.y)).a;
	outline += texture(TEXTURE, UV + vec2(-size.x, size.y)).a;
	outline += texture(TEXTURE, UV + vec2(size.x, size.y)).a;
	outline += texture(TEXTURE, UV + vec2(-size.x, -size.y)).a;
	outline += texture(TEXTURE, UV + vec2(size.x, -size.y)).a;
	outline = min(outline, 1.0);
	
	vec4 color = texture(TEXTURE, UV);
	COLOR = mix(color, line_color, outline - color.a);
}"

[sub_resource type="ShaderMaterial" id=8]
resource_local_to_scene = true
shader = SubResource( 7 )
shader_param/line_color = Color( 1, 0, 0, 1 )
shader_param/line_thickness = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.75, 25.5625 )

[sub_resource type="Animation" id=12]
resource_name = "Death"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 4, 5, 2 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "SceneDeath"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 13, 14 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=5]
resource_name = "Run"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Shot"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/line_thickness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "flickerLine"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/line_thickness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 2.0, 0.5, 2.0, 0.5, 2.0, 0.5, 2.0, 0.5, 2.0, 0.5, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "idleEffects"
} ]
}

[sub_resource type="Animation" id=11]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/line_thickness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 477, 510 )
script = ExtResource( 2 )
bullet_normal = ExtResource( 3 )
shield = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 8 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
hframes = 4
vframes = 4
frame = 13

[node name="position1" type="Position2D" parent="Sprite"]
position = Vector2( 16.6667, -2 )
scale = Vector2( 0.666667, 0.666667 )
__meta__ = {
"_gizmo_extents_": 7.1
}

[node name="position2" type="Position2D" parent="Sprite"]
position = Vector2( 16.6667, 7.33331 )
scale = Vector2( 0.666667, 0.666667 )
__meta__ = {
"_gizmo_extents_": 7.1
}

[node name="position3" type="Position2D" parent="Sprite"]
position = Vector2( 16.6667, 16.6667 )
scale = Vector2( 0.666667, 0.666667 )
__meta__ = {
"_gizmo_extents_": 7.1
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.75, 21 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
playback_speed = 2.29
anims/Death = SubResource( 12 )
anims/Idle = SubResource( 4 )
anims/RESET = SubResource( 3 )
anims/Run = SubResource( 5 )
anims/Shot = SubResource( 6 )

[node name="TimerRainOfBullets" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="positionProtect" type="Position2D" parent="."]
position = Vector2( -1, 15 )
scale = Vector2( 0.666667, 0.666667 )
__meta__ = {
"_gizmo_extents_": 7.1
}

[node name="TimerShield" type="Timer" parent="."]
wait_time = 5.0

[node name="AnimationEffects" type="AnimationPlayer" parent="."]
autoplay = "idle"
playback_speed = 2.0
anims/RESET = SubResource( 10 )
anims/flickerLine = SubResource( 9 )
anims/idle = SubResource( 11 )

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="TimerRainOfBullets" to="." method="_on_TimerRainOfBullets_timeout"]
[connection signal="timeout" from="TimerShield" to="." method="_on_TimerShield_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
